feat: add disabled buttons

--- a/momentum/index.html
+++ b/momentum/index.html
@@ -26,8 +26,8 @@
   <h2>What We Do Today?</h2>
   <input class="focus" type="text" data-test="focus-input" placeholder="">
   <div class="wrapper-button">
-    <img class="btn" src="./assets/gratis.png"></img>
-    <img class='bg' src="./assets/pngegg.png"></img>
+    <button class="btn"></button>
+    <button class='bg'></button>
   </div>
   <figure class="quote">
     <blockquote>
